guestbook/guestbook-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-ui
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8000
    - name: https
      port: 443
      protocol: TCP
      targetPort: 8000
  selector:
    app: guestbook-ui
